...
    );
    Animated.stagger(100, animations).start();
  }, []);

  const handleAddMenu = async () => {
    await successNotification();
    await commitOnboarding(undefined, { initialTab: 'Menu' });
  };

  const handleStartSelling = async () => {
    await successNotification();
    await commitOnboarding();
  };
...
